--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "angular2": "2.0.0-beta.12",
     "bootstrap": "^4.0.0-alpha.2",
     "es6-shim": "^0.35.0",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
+    "moment": "^2.12.0",
+    "ng2-bootstrap": "^1.0.7",
+    "reflect-metadata": "0.1.3",
+    "rxjs": "5.0.0-beta.3",
     "systemjs": "0.19.24",
     "zone.js": "0.6.6"
   },
