--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@angular2-material/button": "^2.0.0-alpha.1",
     "@angular2-material/checkbox": "^2.0.0-alpha.1",
     "@angular2-material/core": "^2.0.0-alpha.1",
     "angular2": "2.0.0-beta.12",
