changes to compile ts in browser for faster turnaround time

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,28 +1,8 @@
 {
-  "version": "0.1.0",
-  "command": "npm",
-  "windows": {
-    "command": "npm.cmd"
-  },
-  "tasks": [
-    {
-      // Build task, Ctrl+Shift+B
-      // "npm install --loglevel info"
-      "taskName": "run",
-      "isBuildCommand": true,
-      "args": ["tsc"],
-      "showOutput": "always"
-    },
-    {   
-      // Test task, Ctrl+Shift+T
-      // "npm test"
-      "taskName": "test",
-      "isTestCommand": true
-    },
-    {
-      // "npm run lint"
-      "taskName": "lint",
-      "args": ["run"]
-    }
-  ]
+    "version": "0.1.0",
+    "command": "tsc",
+    "isShellCommand": true,
+    "isBuildCommand": true,
+    "showOutput": "always",
+    "args": ["-w"]   
 }
