--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,11 @@
     "target": "es5",
     "module": "system",
     "moduleResolution": "node",
-    "inlineSourceMap":true,
-    "inlineSources":true,
+    "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
-    "noImplicitAny": false,
-    "pretty": true
+    "noImplicitAny": false
   },
   "exclude": [
     "node_modules",
