--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "angular2-quickstart",
   "version": "1.0.0",
   "scripts": {
-    "start": "concurrent \"npm run tsc:w\" \"npm run lite\" ",    
+    "start": "concurrent \"npm run tsc:w\" \"npm run lite\" ",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "lite": "lite-server",
     "typings": "typings",
-    "postinstall": "typings install" 
-  },  
+    "postinstall": "typings install"
+  },
   "license": "ISC",
   "dependencies": {
     "angular2": "2.0.0-beta.7",
@@ -23,5 +23,12 @@
     "concurrently": "^2.0.0",
     "lite-server": "^2.1.0",
     "typescript": "^1.7.5"
+  },
+  "jspm": {
+    "dependencies": {},
+    "devDependencies": {
+      "css": "github:systemjs/plugin-css@^0.1.20",
+      "typescript": "npm:typescript@^1.6.2"
+    }
   }
 }
